--- a/css/style.scss
+++ b/css/style.scss
@@ -32,3 +32,91 @@ input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
   color:#999; }
 html,body{width:100%;
           height:100%;}
+
+.wrap{
+    width:100%;
+    height:100%;
+    display: flex;
+    flex-direction:column;
+}
+.header{
+    width:100%;
+    height:.46rem;
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+    padding:0 .1rem;
+    background:#C4493C;
+}
+.i-box1,.i-box2{
+    width:15%;
+    height:100%;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+}
+.i-box1>i,.i-box2>i{
+    font-size:.2rem;
+    color:#fff;
+}
+.header>input{
+    width:70%;
+    height:60%;
+    border-radius:20px;
+    border:0;
+    text-align: center;
+}
+.headtwo{
+    width:100%;
+    height:.45rem;
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+    padding:0 .3rem;
+}
+.tit{
+    height:100%;
+    width:20%;
+    line-height:.45rem;
+    text-align:center;
+    border-bottom:1px solid #fff;
+}
+.tit:hover{
+    color:#C4493C;
+    border-bottom:1px solid #C4493C;
+}
+.section{
+    width:100%;
+    flex:1;
+    overflow-y:scroll;
+}
+.ban,.hua,.kuai,.kuai>img{
+    width:100%;
+    height:auto;
+}
+.icon-header{
+    width:100%;
+    height:.8rem;
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+     padding:0 .2rem;
+     border-bottom:1px solid #eee;
+}
+.icon-box{
+    width:20%;
+    height:100%;
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    justify-content:center;
+
+}
+.icon-box>i{
+    font-size:.3rem;
+    color:#C4493C;
+}
+.icon-box>span{
+    font-size:12px;
+    color:#C4493C;
+}
